benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/debug/bignum_DivMod_Compare_iter1_error.log
=== Verification Error - Iteration 1 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_DivMod_Compare.rs
Time: 2025-09-15 20:18:14

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0277]: the trait bound `std::iter::Rev<std::ops::Range<usize>>: vstd::pervasive::ForLoopGhostIteratorNew` is not satisfied
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_DivMod_Compare_impl.rs:73:5
   |
73 | /     for j in (0..l1).rev() {
74 | |         let d1 = v1[j] as i32 - '0' as i32;
75 | |         let d2 = v2_padded[j] as i32 - '0' as i32;
76 | |         let mut res = d1 - borrow - d2;
...  |
83 | |         result.push((res + '0' as i32) as u8 as char);
84 | |     }
   | |_____^ the trait `vstd::pervasive::ForLoopGhostIteratorNew` is not implemented for `std::iter::Rev<std::ops::Range<usize>>`
   |
   = help: the following other types implement trait `vstd::pervasive::ForLoopGhostIteratorNew`:
             std::collections::hash_map::Iter<'a, Key, Value>
             std::collections::hash_map::Keys<'a, Key, Value>
             std::collections::hash_map::Values<'a, Key, Value>
             std::collections::hash_set::Iter<'a, Key>
             std::collections::vec_deque::Iter<'a, T>
             std::ops::Range<A>
             std::slice::Iter<'a, T>
             std::str::Chars<'a>
             std::vec::IntoIter<T, A>

error[E0277]: the trait bound `std::iter::Rev<std::ops::Range<usize>>: vstd::pervasive::ForLoopGhostIteratorNew` is not satisfied
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_DivMod_Compare_impl.rs:73:14
   |
73 |     for j in (0..l1).rev() {
   |              ^^^^^^^^^^^^^ the trait `vstd::pervasive::ForLoopGhostIteratorNew` is not implemented for `std::iter::Rev<std::ops::Range<usize>>`
   |
   = help: the following other types implement trait `vstd::pervasive::ForLoopGhostIteratorNew`:
             std::collections::hash_map::Iter<'a, Key, Value>
             std::collections::hash_map::Keys<'a, Key, Value>
             std::collections::hash_map::Values<'a, Key, Value>
             std::collections::hash_set::Iter<'a, Key>
             std::collections::vec_deque::Iter<'a, T>
             std::ops::Range<A>
             std::slice::Iter<'a, T>
             std::str::Chars<'a>
             std::vec::IntoIter<T, A>

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.

--------------------------------------------------------------------------------

Additional Output:
error[E0277]: the trait bound `std::iter::Rev<std::ops::Range<usize>>: vstd::pervasive::ForLoopGhostIteratorNew` is not satisfied
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_DivMod_Compare_impl.rs:73:5
   |
73 | /     for j in (0..l1).rev() {
74 | |         let d1 = v1[j] as i32 - '0' as i32;
75 | |         let d2 = v2_padded[j] as i32 - '0' as i32;
76 | |         let mut res = d1 - borrow - d2;
...  |
83 | |         result.push((res + '0' as i32) as u8 as char);
84 | |     }
   | |_____^ the trait `vstd::pervasive::ForLoopGhostIteratorNew` is not implemented for `std::iter::Rev<std::ops::Range<usize>>`
   |
   = help: the following other types implement trait `vstd::pervasive::ForLoopGhostIteratorNew`:
             std::collections::hash_map::Iter<'a, Key, Value>
             std::collections::hash_map::Keys<'a, Key, Value>
             std::collections::hash_map::Values<'a, Key, Value>
             std::collections::hash_set::Iter<'a, Key>
             std::collections::vec_deque::Iter<'a, T>
             std::ops::Range<A>
             std::slice::Iter<'a, T>
             std::str::Chars<'a>
             std::vec::IntoIter<T, A>

error[E0277]: the trait bound `std::iter::Rev<std::ops::Range<usize>>: vstd::pervasive::ForLoopGhostIteratorNew` is not satisfied
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_DivMod_Compare_impl.rs:73:14
   |
73 |     for j in (0..l1).rev() {
   |              ^^^^^^^^^^^^^ the trait `vstd::pervasive::ForLoopGhostIteratorNew` is not implemented for `std::iter::Rev<std::ops::Range<usize>>`
   |
   = help: the following other types implement trait `vstd::pervasive::ForLoopGhostIteratorNew`:
             std::collections::hash_map::Iter<'a, Key, Value>
             std::collections::hash_map::Keys<'a, Key, Value>
             std::collections::hash_map::Values<'a, Key, Value>
             std::collections::hash_set::Iter<'a, Key>
             std::collections::vec_deque::Iter<'a, T>
             std::ops::Range<A>
             std::slice::Iter<'a, T>
             std::str::Chars<'a>
             std::vec::IntoIter<T, A>

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
